# hsm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_zh.md  Taskfile.yml
.github/workflows/: release.yml  test.yml
cmake/: OptionVariables.cmake  ProjectConfig.cmake
example/: CMakeLists.txt
example/01_basic/: main.c
example/02_device/: device_sm.c  device_sm.h  main.c
example/basic/: main.cpp
example/basic_example/: main.cpp
example/dist_agent/: main.cpp
example/door/: main.cpp
example/minimum/: main.cpp
example/toggle/: main.cpp
include/hsm/: hsm.hpp
include/smf/: smf.h
src/: smf.c
test/: CMakeLists.txt  test_5_ancestor.c  test_basic.c  test_flat.c  test_hierarchical.c  test_self_transition.c
test/cases/: test_ancestor.cpp  test_basic.cpp  test_boundary.cpp  test_dispatch.cpp  test_dynamic_policy.cpp  test_fast_policy.cpp  test_hierarchical.cpp  test_matcher.cpp  test_reentrancy.cpp  test_scope_proxy.cpp  test_self_transition.cpp  test_start_with_transition.cpp  test_tag_policy.cpp
